# Corsac_ECS

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
include/: Component.h  ComponentArray.h  ComponentManager.h  ECSManager.h  Event.h  EventManager.h  ObjectManager.h  System.h  SystemManager.h  Types.h
src/: CRSC.cpp
